修改了惯导的接收方式

--- a/FlightControler.ioc
+++ b/FlightControler.ioc
@@ -218,12 +218,12 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.UART5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.UART8_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UART5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.UART8_IRQn=true\:9\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.Signal=S_TIM2_CH1_ETR
@@ -471,7 +471,8 @@ TIM2.Pulse-PWM\ Generation1\ CH1=1500
 TIM2.Pulse-PWM\ Generation2\ CH2=1500
 TIM2.Pulse-PWM\ Generation3\ CH3=1500
 TIM2.Pulse-PWM\ Generation4\ CH4=1500
-TIM3.IPParameters=Prescaler
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=1999
 TIM3.Prescaler=199
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -479,7 +480,7 @@ TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3
 TIM4.Period=9999
-TIM4.Prescaler=399
+TIM4.Prescaler=199
 TIM4.Pulse-PWM\ Generation1\ CH1=1500
 TIM4.Pulse-PWM\ Generation2\ CH2=1500
 TIM4.Pulse-PWM\ Generation3\ CH3=1500
